PostGIS 2.5.5
2020/xx/xx

 * Bug fixes *

  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
  - #4661, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
  - #4670, ST_AddPoint: Fix bug when a positive position is requested (Raúl Marín)
  - #4699, crash on null input to ST_Union(raster, otherarg) (Jaime Casanova, 2ndQuadrant)

PostGIS 2.5.4
2020/02/28

 * Bug fixes *

  - #4480, Geography Distance inconsistent with Intersects (Paul Ramsey)
  - #4481, Improve libprotobuf detection for old systems (Paul Ramsey)
  - #4475, Avoid reading into empty ptarray (Paul Ramsey)
  - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
  - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
  - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
  - #4496, Make ST_Simplify(TRIANGLE) collapse if requested (Raúl Marín)
  - #4506, Remove tolerance in point-in-ring tests (Paul Ramsey)
  - #4338, Fix Census block level data (tabblock table) loading (Regina Obe)
  - #4519, Fix getSRIDbySRS crash (Raúl Marín)
  - #4517, Documentation error ST_EndPoint (Samuel Spurling)
  - #4530, Avoid bogus AddRasterConstraint in upgrade tests (Sandro Santilli)
  - #4534, Fix leak in lwcurvepoly_from_wkb_state (Raúl Marín)
  - #4536, Fix leak in lwcollection_from_wkb_state (Raúl Marín)
  - #4537, Fix leak in WKT collection parser (Raúl Marín)
  - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
  - #4549, Fix schema qualification of internal types (Raúl Marín)
  - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
  - #4588, Fix update when st_union(geometry) doesn't exist (Raúl Marín)
  - #4599, ST_AddPoint: Accept -1 as a valid position (Raúl Marín)
  - #4605, Fix postgis_upgrade.pl with PostgreSQL 12 (Matti Linnanvuori)